<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SavedItemsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_medium"
            android:text="Saved Items"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="15dp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/applied_job_card"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/gray"
        app:strokeWidth="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/looking_for_job_selected"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/company_icon"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Applied Jobs"
                android:layout_marginHorizontal="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/save_job_card"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/gray"
        app:strokeWidth="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/applied_job_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_jobs"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/saved_jobs_icon"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Saved Jobs"
                android:layout_marginHorizontal="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/save_scholarship_card"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/gray"
        app:strokeWidth="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/save_job_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_scholarship"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/scholarship_icon"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Saved Scholarships"
                android:layout_marginHorizontal="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/subs_companies_card"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/gray"
        app:strokeWidth="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/save_scholarship_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_companies"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/company_icon"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Subscribed Companies"
                android:layout_marginHorizontal="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>