<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.JobListingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_medium"
            android:text="Jobs"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="13dp"
            android:contentDescription="@string/search"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_round_search_24" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/filter_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:layout_weight="3.5"
            android:entries="@array/job_search_categories"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/search_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:paddingHorizontal="5dp"
            android:layout_weight="5"
            android:backgroundTint="@color/primary_text"
            android:fontFamily="@font/varela_round"
            android:hint="Search"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/cancel_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:contentDescription="@string/cancel_search"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:visibility="visible"
        android:elevation="1dp"
        android:focusable="true"
        android:contentDescription="@string/error_occured"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_txt"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/error_anim"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:paddingHorizontal="10dp"
            android:maxHeight="400dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/error_cone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="5dp"
            android:text="Something went wrong :("
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:contentDescription="@string/no_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:visibility="gone"
        android:elevation="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_txt"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/search_empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="No results"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/filter_txt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="16dp"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:fontFamily="@font/varela_round"
        android:text="FILTERS"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="2dp"
            android:id="@+id/parent_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_txt">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <include
                layout="@layout/placeholder_jobs_list"/>
            <include
                layout="@layout/placeholder_jobs_list"/>
            <include
                layout="@layout/placeholder_jobs_list"/>
            <include
                layout="@layout/placeholder_jobs_list"/>
            <include
                layout="@layout/placeholder_jobs_list"/>
            <include
                layout="@layout/placeholder_jobs_list"/>
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/job_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="130dp"
                android:clipToPadding="false"
                android:importantForAccessibility="yes"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:nestedScrollingEnabled="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="8"
                tools:listitem="@layout/scholarship_rv_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/next_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginVertical="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:text="Loading content...please wait"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>